--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-loader-spinner": "^5.3.4",
 		"react-polyfills": "0.0.1",
-		"react-router": "^6.0.2"
+		"react-router": "^6.0.2",
+		"uuid": "^9.0.0"
 	}
 }
